# $Id$
2008-01-11 Benoit Grégoire  <bock@step.polymtl.ca>
	* Use the Dependency system to include PHPMailer and tweak Mail.php.  You'll need to re-run the Dpenedency stage of the install script. This allows:  Translating PHPMailer error messages, Actually having PHPMailer error messages, and displaying them properly.
	
2008-01-09 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add gettext calls, fixes #413
	
2008-01-06 Benoit Grégoire  <bock@step.polymtl.ca>
	* Some more work on the permission system.  At long last, close #358
	
2008-01-05 Benoit Grégoire  <bock@step.polymtl.ca>
	* French translation update from Frederic Sheedy (sheedf@gmail.com).  Closes #411

2007-12-30 Benoit Grégoire  <bock@step.polymtl.ca>
	* Workaround IE6 braindeadness in the base theme.  Closes  #406.  Credit goes to Frederic Sheedy (sheedf@gmail.com)
	
2007-12-23 Benoit Grégoire  <bock@step.polymtl.ca>
	* Node.php:  Fix bug in setCurrentNode() reported by Vacio
	* install.php, Dependency.php:  Commit install script improvements by Robin Jones
	
2007-11-29 Benoit Grégoire  <bock@step.polymtl.ca>
	* signup.tpl, lost_username.tpl, lost_password.tpl, resend_validation.tpl:  Move the error div near the button for coherence with the login page (and for the same reason).  In fact it was worse than the login page used to be:  the error message during signup could appear completely below the page for a user with a low resolution screeen (or big font), giving the form the apereance of doing absolutely nothing (it stumped even me as I was trying to help a user).

2007-11-23 Benoit Grégoire  <bock@step.polymtl.ca>
	* UIUserList.php: Don't force it to be persistent, it prevented users from deleting it.

2007-11-15 Benoit Grégoire  <bock@step.polymtl.ca>
	* Menu.php: Make individual submenus, and individual menu items CSS-targetable.

2007-11-05 Benoit Grégoire  <bock@step.polymtl.ca>
	* Commit most of Robin Jones install script improvements.
		
2007-10-22 Benoit Grégoire  <bock@step.polymtl.ca>